Tue Mar 30 08:40:10 BST 2004 (trog)
-----------------------------------
  * clamav.conf, shared/cfgparser.c: recognise ReadTimeout option

Mon Mar 29 18:11:08 CEST 2004 (tk)
----------------------------------
  * shared/output.c: don't try to unlock free mutex (bug reported
		     by Nigel)

Mon Mar 29 16:17:05 BST 2004 (trog)
-----------------------------------
  * clamd: disable timeout when ReadTimeout=0

Mon Mar 29 15:45:15 BST 2004 (trog)
-----------------------------------
  * clamd: add support for ReadTimeout option

Mon Mar 29 10:33:52 BST 2004 (njh)
----------------------------------
  * libclamav:	Tidy up code and reduce shuffling of data

Mon Mar 29 02:05:39 CEST 2004 (tk)
----------------------------------
  * big cleanup: remove duplicated code and move it to /shared (fixes
		 a dependency problem when compiling with --disable-pthreads
		 and LogSyslog support in freshclam); eliminate warnings
  * libclamav: include backup snprintf implementation (patch by Phil Oleson
	       <oz*nixil.net>, snprintf by Patrick Powell)
  * clamd: fix clamd hangup when log size is exceeded (bug reported by
	   Ryan Thompson <clamav*sasknow.com>)
  * examples/ex1.c: update

Sat Mar 27 21:55:33 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Delay connection to clamd to handle clamd's timeout
	when the remote end (the end talking to sendmail) is slow

Sat Mar 27 19:55:52 CET 2004 (tk)
---------------------------------
  * freshclam: remove timeout code; clean up return codes
  * docs: freshclam.1 updated

Fri Mar 26 23:23:21 CET 2004 (tk)
---------------------------------
  * clamdscan: don't call getcwd() in streaming mode (patch by Dale Woolridge
	       <dwoolridge*drh.net>)
  * configure: improved checking for TCPwrappers (patch by Tom G. Christensen
	       <tgc*statsbiblioteket.dk>)

Fri Mar 26 22:53:45 CET 2004 (tk)
---------------------------------
  * clamdscan: don't call getcwd() in streaming mode (patch by Dale Woolridge