@@ -50,6 +50,16 @@ pthread_mutex_t logg_mutex = PTHREAD_MUTEX_INITIALIZER;
 
 FILE *logg_fd = NULL;
 
+short int logg_verbose = 0, logg_lock = 0, logg_time = 0;
+int logg_size = 0;
+const char *logg_file = NULL;
+#if defined(USE_SYSLOG) && !defined(C_AIX)
+short logg_syslog = 0;
+#endif
+
+short int mprintf_disabled = 0, mprintf_verbose = 0, mprintf_quiet = 0,
+	  mprintf_stdout = 0;
+
 int mdprintf(int desc, const char *str, ...)
 {
 	va_list args;
