@@ -30,15 +30,15 @@ int mdprintf(int desc, const char *str, ...);
 
 int logg(const char *str, ...);
 void logg_close(void);
-short int logg_verbose, logg_lock, logg_time;
-int logg_size;
-const char *logg_file;
+extern short int logg_verbose, logg_lock, logg_time;
+extern int logg_size;
+extern const char *logg_file;
 
 #if defined(USE_SYSLOG) && !defined(C_AIX)
-short logg_syslog;
+extern short logg_syslog;
 #endif
 
 void mprintf(const char *str, ...);
-short int mprintf_disabled, mprintf_verbose, mprintf_quiet, mprintf_stdout;
+extern short int mprintf_disabled, mprintf_verbose, mprintf_quiet, mprintf_stdout;
 
 #endif
